@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-09T16:14:32Z",
-  "count_outdated" : 237,
-  "uniques_outdated" : 110,
+  "timestamp" : "2022-04-12T16:14:18Z",
+  "count_outdated" : 238,
+  "uniques_outdated" : 111,
   "count" : 252,
   "uniques" : 120,
   "clones" : [
-    {
-      "timestamp": "2022-03-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-04-03T00:00:00Z",
       "count": 11,
