@@ -1,12 +1,7 @@
 {
-  "count": 15,
-  "uniques": 10,
+  "count": 14,
+  "uniques": 9,
   "clones": [
-    {
-      "timestamp": "2022-03-29T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-04-03T00:00:00Z",
       "count": 11,
